// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal> renders 1`] = `
<dialog
  aria-label="test"
  open="true"
>
  <button
    aria-label="Close Dialog"
    class="close"
  >
    X
  </button>
</dialog>
`;

exports[`<Modal> renders 2`] = `
<dialog
  aria-label="test"
>
  <button
    aria-label="Close Dialog"
    class="close"
  >
    X
  </button>
</dialog>
`;
